--- a/style.css
+++ b/style.css
@@ -6,7 +6,12 @@
   --color-Red500: hsl(356, 100%, 66%);
   --color-Red400: hsl(355, 100%, 74%);
   --color-Blue900: hsl(208, 49%, 24%);
-  --color-White: hsl(0, 100%, 100%);
+  --color-myWhite: hsl(0, 100%, 100%);
   --color-Gray600: hsl(207, 13%, 34%);
   --color-Gray900: hsl(240, 10%, 16%);
+}
+
+header{
+    background-image: linear-gradient(hsla(13, 100%, 72%, 0.934), hsla(353, 100%, 62%, 0.918)), url(images/bg-pattern-intro-mobile.svg);
+    border-bottom-left-radius: 6rem;
 }
